--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
       <title>MediCenter | MGN</title>
 
       <link rel="stylesheet" href="./assets/css/style.css" />
+
+      <script type="text/javascript">
+         window.onload = function() {
+            document.querySelector(".menuMobile").addEventListener("click", function(){
+               if(document.querySelector(".menu nav ul").style.display == 'flex') {
+                  document.querySelector(".menu nav ul").style.display = 'none';
+               } else {
+                  document.querySelector(".menu nav ul").style.display = 'flex'
+               }
+            })
+         }
+      </script>
    </head>
    <body>
       <header>
@@ -18,6 +30,12 @@
             </div>
             <div class="menu">
                <nav>
+
+                  <div class="menuMobile">
+                     <div class="mm_line"></div>
+                     <div class="mm_line"></div>
+                     <div class="mm_line"></div>
+                  </div>
                   <ul>
                      <li class="active"><a href="">HOME</a></li>
                      <li><a href="">PAGES</a></li>
